Fauna changset as of 2025-05-02